feat: user crud added
